# mediacodec-example

./: build.gradle  settings.gradle
LibRtmpClient/: CMakeLists.txt  build.gradle
LibRtmpClient/src/androidTest/java/dai/android/media/protocol/rtmp/: ExampleInstrumentedTest.java
LibRtmpClient/src/main/: AndroidManifest.xml
LibRtmpClient/src/main/cpp/: Logger.h  rtmp_client.cpp  rtmp_muxer.cpp
LibRtmpClient/src/main/cpp/flvmuxer/: flv_rtmp.c  flv_rtmp.h
LibRtmpClient/src/main/java/dai/android/media/protocol/rtmp/: RTMPClient.java  RTMPIOException.java  RTMPLibLoader.java  RTMPMuxer.java
LibRtmpClient/src/test/java/dai/android/media/protocol/rtmp/: ExampleUnitTest.java
app/: build.gradle
app/src/androidTest/java/dai/android/example/codec/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/dai/android/app/: MainActivity.java
app/src/main/java/dai/android/app/help/: ScreenInfo.java
app/src/main/java/dai/android/bili/: BaseRunnable.java  FMP4Save.java  MuxerActivity.java  ParseRunnable.java  README  WriteRunnable.java
app/src/main/java/dai/android/debug/: Logger.java
app/src/main/java/dai/andruid/media/: MainActivity.java  MediaCodecPlayer.java  SpeedController.java
app/src/main/res/layout/: activity_camera.xml  activity_main.xml  activity_main_item.xml  activity_muxer.xml  activity_test_audio_encoder.xml  layout_camera_pref_settings.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
(+104 files in other folders)
